don’t use deprecated newInstance way